# he-nn-poc

./: CMakeLists.txt  README.md  Vagrantfile  image.txt  main.cpp  weights.txt  weights2.txt
src/: Client.cpp  Client.h  Matrix.h  Server.cpp  Server.h  file_utils.cpp  file_utils.h
